feat: the player can get a card